# LineCounter

LineCounter/: CMakeLists.txt
LineCounter/sources/: FileReader.cpp  FileReader.h  TaskManager.cpp  TaskManager.h  main.cpp
